<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广西文化云</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="login">登录</string>
    <string name="phone">请输入您的手机号码</string>
    <string name="password">请输入您的密码</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_infm_account">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_install_wechat">未安装微信</string>
    <string name="no_install_qq">未安装QQ</string>
    <string name="tip_loging">登录中...</string>
    <string name="tip_begin_oauth">开始授权...</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_cancle">授权取消</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="xiaowu">IT_xiao小巫</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">注册</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_nickname">请输入昵称</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="reset_pwd">重置密码</string>

    <string name="Search_locate_content">输入城市名或拼音查询</string>

    <string name="opening_wechat">正在打开微信，请稍后...</string>
    <string name="opening_qq">正在打开QQ，请稍后...</string>
    <string name="opening_blog">正在打开微博，请稍后...</string>
</resources>