<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    style="@style/ActivityTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#F8F8F8"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/tb_icon_actionbar_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="登录"
            android:textColor="#1f1724"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/create_infm_account"
            android:textColor="#5c5c5c"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.guangxi.culturecloud.views.CleanEditText
                android:id="@+id/et_email_phone"
                style="@style/login_edit_style"
                android:hint="@string/phone"
                android:inputType="phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#f8f8f8" />

            <com.guangxi.culturecloud.views.CleanEditText
                android:id="@+id/et_password"
                style="@style/login_edit_style"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:textColor="#880066CC"
                android:textSize="15dp"
                android:text="忘记密码？"/>

        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:id="@+id/bottom_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="15dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:visibility="gone"-->
            <!--android:gravity="center_horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/tv_create_account"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginRight="16dp"-->
                <!--android:layout_toLeftOf="@+id/seprate"-->
                <!--android:clickable="true"-->
                <!--android:onClick="onClick"-->
                <!--android:text="@string/create_infm_account"-->
                <!--android:textColor="#5c5c5c"-->
                <!--android:textSize="12sp" />-->

            <!--<View-->
                <!--android:id="@+id/seprate"-->
                <!--android:layout_width="0.5dp"-->
                <!--android:layout_height="15dp"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:background="#5c5c5c" />-->

            <!--<TextView-->
                <!--android:id="@+id/tv_forget_password"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_toRightOf="@id/seprate"-->
                <!--android:clickable="true"-->
                <!--android:onClick="onClick"-->
                <!--android:text="@string/forget_password"-->
                <!--android:textColor="#5c5c5c"-->
                <!--android:textSize="12sp" />-->
        <!--</RelativeLayout>-->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="onClick"
            android:text="@string/login"
            android:background="#0066CC"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/third_login_explain_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="45dp">

            <TextView
                android:id="@+id/tv_third_login_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/use_third_account"
                android:textColor="#5c5c5c"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/tv_third_login_explain"
                android:background="#969696" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:layout_toRightOf="@id/tv_third_login_explain"
                android:background="#969696" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/third_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/third_login_explain_layout"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:onClick="onClick"
                android:src="@drawable/btn_login_wechat_selector" />

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="onClick"
                android:src="@drawable/btn_login_qq_selector" />

            <ImageView
                android:id="@+id/iv_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:onClick="onClick"
                android:src="@drawable/btn_login_sina_selector" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>